--- a/views/success.pug
+++ b/views/success.pug
@@ -3,4 +3,5 @@ block body
     h1 Success
     div(class="row")
         div(class="col-md-6")
-            p Thanks, you can see your submission here: #{resp}
+            p Thanks, you can see your submission
+            a(href=repo_url) here
